--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,10 @@
+AddType image/svg+xml .svg .svgz
+
+AddType video/ogg .ogm
+AddType video/ogg .ogv
+AddType video/ogg .ogg
+AddType video/webm .webm
+AddType video/mp4 .mp4
 
 # BEGIN WordPress
 <IfModule mod_rewrite.c>
